@@ -1,5 +1,5 @@
 /*
- * $Id: clearopensmtp.c,v 1.6 2004-05-22 12:28:21 rwidmer Exp $
+ * $Id: clearopensmtp.c,v 1.7 2004-12-28 00:31:05 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -43,7 +43,7 @@ int main()
  time_t mytime;
  time_t clear_minutes;
 
-	if( vauth_open()) {
+	if( vauth_open( 0 )) {
 		vexiterror( stderr, "Initial open." );
 	}
 
