@@ -1,5 +1,5 @@
 /*
- * $Id: vcdb.c,v 1.18 2004-06-03 23:34:51 rwidmer Exp $
+ * $Id: vcdb.c,v 1.19 2004-12-28 00:31:05 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -18,7 +18,7 @@
  */
 /******************************************************************************
 **
-** $Id: vcdb.c,v 1.18 2004-06-03 23:34:51 rwidmer Exp $
+** $Id: vcdb.c,v 1.19 2004-12-28 00:31:05 rwidmer Exp $
 ** Change a domain's password file to a CDB database
 **
 ** Chris Johnson, July 1998
@@ -736,7 +736,7 @@ int vmkpasswd( char *domain )
 
 /*   Verify the connection to the authentication database   */
 
-int vauth_open() {
+int vauth_open( int will_update ) {
 
 #ifdef SHOW_TRACE
     fprintf( stderr, "vauth_open()\n");
