@@ -1,5 +1,5 @@
 /*
- * $Id: vconvert.c,v 1.7 2004-11-23 15:47:03 tomcollins Exp $
+ * $Id: vconvert.c,v 1.8 2004-12-28 00:31:05 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -80,7 +80,7 @@ int  PasswdFormat;
 
 int main(int argc, char *argv[])
 {
-	if( vauth_open()) {
+	if( vauth_open( 1 )) {
 		vexiterror( stderr, "Initial open." );
 	}
 
