@@ -1,5 +1,5 @@
 /*
- * $Id: vdeldomain.c,v 1.7 2004-05-22 12:28:21 rwidmer Exp $
+ * $Id: vdeldomain.c,v 1.8 2004-12-28 00:31:05 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -46,7 +46,7 @@ int main(int argc, char *argv[])
  char parent[MAX_BUFF];
  int  i, aliascount=0, doit=1;
 
-    if( vauth_open()) {
+    if( vauth_open( 1 )) {
         vexiterror( stderr, "Initial open." );
     }
 
