@@ -209,7 +209,7 @@ int main(int argc, char **argv)
  int i;
  int found;
 
-  if( vauth_open()) {
+  if( vauth_open( 1 )) {
       snprintf(WriteBuf,sizeof(WriteBuf),
         RET_ERR "Can't open authentication database." RET_CRLF);
       wait_write();
